[package]
name = "woofi_jupiter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "woofi_jupiter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"
spl-token = "=4.0.0"
solana-program = "=1.17.31"
solana-sdk = "=1.17.31"
jupiter-amm-interface = "=0.4.4"
anyhow = "1.0"
serde = "1.0.210"
serde_json = "1.0.128"
pyth-solana-receiver-sdk = "=0.3.1"
thiserror = "=1.0.65"
bincode = "1.3.3"
tokio = { version = "1.14.1", features = ["full"] }

[dev-dependencies]
solana-client = "=1.17.31"
