[package]
name = "woofi_jupiter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "woofi_jupiter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = "6.0.0"
solana-program = "2"
solana-sdk = "2"
jupiter-amm-interface = "0.5.0"
anyhow = "1.0"
serde = "1.0.210"
serde_json = "1.0.128"
pyth-solana-receiver-sdk = { git = "https://github.com/jup-ag/pyth-crosschain.git", rev = "3025d84fba2846fff86589269b40ada950edaad5" }
thiserror = "1.0"
bincode = "1.3.3"
tokio = { version = "1.14.1", features = ["full"] }

[dev-dependencies]
solana-client = "2"


[patch.crates-io]
anchor-lang = { git = "https://github.com/jup-ag/anchor.git", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2" }
anchor-spl = { git = "https://github.com/jup-ag/anchor.git", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2" }
anchor-client = { git = "https://github.com/jup-ag/anchor.git", rev = "fa381028b6c28ab865644ac9ab02948ba30a89a2" }